--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,6 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
 group = 'edu.mipt.ponomarev'
@@ -24,7 +23,7 @@ repositories {
 
 
 dependencies {
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+	compile group: 'com.google.code.gson', name: 'gson'
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
